bug correction betw. QC display and adjusted param

--- a/scrpy_analysis_from_prof_files.ipynb
+++ b/scrpy_analysis_from_prof_files.ipynb
@@ -412,7 +412,8 @@
     "dac,wmo,type='coriolis','5906972','BGC'\n",
     "dac,wmo,type='aoml','4903220','CORE'\n",
     "#dac,wmo,type='aoml','4903217','CORE'\n",
-    "\n",
+    "dac,wmo,type='coriolis','7900344','CORE'\n",
+    "dac,wmo,type='coriolis','3901908','CORE'\n",
     "\n",
     "file=get_file_on_http(type,wrk_dir,dac,wmo)\n",
     "\n",
@@ -453,15 +454,16 @@
     "else:\n",
     "    DATA_MODE_ini=ds.variables['PARAMETER_DATA_MODE'][:]\n",
     "data_mode_ini_shape=np.shape(DATA_MODE_ini)\n",
-    "DATA_MODE = dir_from_char2str(DATA_MODE_ini).tobytes().decode().strip()\n",
+    "DATA_MODE = dir_from_char2str(DATA_MODE_ini)\n",
     "#print(data_mode_ini_shape)\n",
+    "#print('DATA_MODE=',DATA_MODE)\n",
     "\n",
     "i_ADJ=np.array(np.where((DATA_MODE=='A')|(DATA_MODE=='D'))[:])\n",
     "adj_present=(i_ADJ.size>0)\n",
     "print(\"Is there adjusted values ? \",adj_present)\n",
     "\n",
     "data_mode_param_indices_dict_by_param=get_station_parameters_indices(ds)\n",
-    "#print(data_mode_param_indices_dict_by_param)\n",
+    "print(data_mode_param_indices_dict_by_param)\n",
     "\n",
     "if type == \"CORE\" :\n",
     "    sampling_scheme=ds.variables['VERTICAL_SAMPLING_SCHEME'][:]\n",
@@ -615,11 +617,12 @@
     "#l_param=[\"BBP700\",\"CDOM\",\"DOWN_IRRADIANCE490\",\"CHLA\",\"CHLA_ADJUSTED\",\"DOXY\",\"NITRATE_ADJUSTED\",\"PH_IN_SITU_TOTAL\"]\n",
     "#l_param=[\"NITRATE\",\"NITRATE_ADJUSTED\"]\n",
     "#l_param=[\"DOXY\"]\n",
-    "#if adj_present:\n",
-    "#    l_param=[\"PRES\",\"PSAL\",\"TEMP\",\"RHO\",\"PSAL_ADJUSTED\",\"TEMP_ADJUSTED\",\"RHO_ADJUSTED\"]\n",
-    "#else:\n",
-    "#    l_param=[\"PRES\",\"PSAL\",\"TEMP\",\"RHO\"]\n",
-    "l_param=[\"PSAL\",\"TEMP\",\"RHO\"]\n",
+    "if adj_present:\n",
+    "    l_param=[\"PRES\",\"PSAL\",\"TEMP\",\"RHO\",\"PSAL_ADJUSTED\",\"TEMP_ADJUSTED\",\"RHO_ADJUSTED\"]\n",
+    "else:\n",
+    "    l_param=[\"PRES\",\"PSAL\",\"TEMP\",\"RHO\"]\n",
+    "#l_param=[\"PSAL\",\"TEMP\",\"RHO\"]\n",
+    "#l_param=[\"PSAL_ADJUSTED\",\"TEMP_ADJUSTED\",\"RHO_ADJUSTED\"]\n",
     "\n",
     "\n",
     "for param in l_param:\n",
@@ -682,11 +685,12 @@
     "        percent=95        \n",
     "\n",
     "    if param not in [\"RHO\",\"RHO_ADJUSTED\"]:\n",
+    "        param_raw_name=param.replace(\"_ADJUSTED\",\"\")\n",
     "        if type == \"CORE\":\n",
-    "            v0_data_mode=DATA_MODE_ini[data_mode_param_indices_dict_by_param[param][0]]\n",
+    "            v0_data_mode=DATA_MODE_ini[data_mode_param_indices_dict_by_param[param_raw_name][0]]\n",
     "        else:\n",
-    "            v0_data_mode=DATA_MODE_ini[data_mode_param_indices_dict_by_param[param]]\n",
-    "        x_axis_data_mode=x_axis[data_mode_param_indices_dict_by_param[param][0]]\n",
+    "            v0_data_mode=DATA_MODE_ini[data_mode_param_indices_dict_by_param[param_raw_name]]\n",
+    "        x_axis_data_mode=x_axis[data_mode_param_indices_dict_by_param[param_raw_name][0]]\n",
     "        #print(v0_data_mode.tobytes().decode().strip())\n",
     "        v0_data_mode_int=transfer_mode_from_str2int(v0_data_mode)\n",
     "        #print(v0_data_mode_int)\n",
@@ -705,7 +709,7 @@
     "        #print(\"i_QC_good=\",i_QC_good)\n",
     "        #print(\"i_QC_notmissing=\",i_QC_notmissing)\n",
     "    elif param in [\"DOXY\",\"DOXY_ADJUSTED\",\"CHLA\",\"CHLA_ADJUSTED\",\"NITRATE\",\"NITRATE_ADJUSTED\",\n",
-    "                   \"PH_IN_SITU_TOTAL\",\"PH_IN_SITU_TOTAL_ADJUSTED\",\"PSAL\",\"TEMP\",\"RHO\"]:\n",
+    "                   \"PH_IN_SITU_TOTAL\",\"PH_IN_SITU_TOTAL_ADJUSTED\",\"PSAL\",\"TEMP\",\"RHO\",\"PSAL_ADJUSTED\",\"TEMP_ADJUSTED\",\"RHO_ADJUSTED\"]:\n",
     "        print(\"special QC list for DOXY, CHLA, NITRATE and pH\")\n",
     "        good_text=\" QC in (1,2,3,5,8) \"\n",
     "        i_QC_good=np.where((v0_QC==1) | (v0_QC==2) | (v0_QC==3) | (v0_QC==5) | (v0_QC==8))\n",
@@ -910,6 +914,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5be5fbd-46a2-4a9d-8834-ad5a506c7f48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cy_min,cy_max,CYCLE.min(),CYCLE.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7c16a37f-91a2-42ee-bb88-05e8df3b0bc9",
    "metadata": {},
    "outputs": [],
@@ -917,8 +931,9 @@
     "# Plot subsets of cycles, at convenience\n",
     "cy_min=CYCLE.min() # 10\n",
     "cy_max=CYCLE.max() \n",
-    "cy_min=142\n",
-    "cy_max=142\n",
+    "#cy_min=35\n",
+    "#cy_max=44\n",
+    "\n",
     "\n",
     "\n",
     "i_cycle=np.where((CYCLE>=cy_min)&(CYCLE<=cy_max))\n",
@@ -957,8 +972,8 @@
     "# Plot subsets of cycles, at convenience\n",
     "cy_min=CYCLE.min() # 10\n",
     "cy_max=CYCLE.max() \n",
-    "cy_min=1\n",
-    "cy_max=1\n",
+    "cy_min=35\n",
+    "cy_max=44\n",
     "\n",
     "\n",
     "i_cycle=np.where((CYCLE>=cy_min)&(CYCLE<=cy_max)& \n",
@@ -1003,10 +1018,18 @@
    "outputs": [],
    "source": [
     "# choose your criterion\n",
-    "level_ko=(PSAL<34.3)&(PRES<80)&(CYCLE==1) # &(PSAL_QC!=4)\n",
-    "level_ko=(PRES_QC==4)\n",
-    "level_ko=(PSAL_QC==4)|(TEMP_QC==4)\n",
-    "\n",
+    "level_ko=(PSAL<30)&(PRES<80)&(PSAL_QC!=4)\n",
+    "#level_ko=(PRES_QC==4)\n",
+    "#level_ko=(PSAL_QC==4)|(TEMP_QC==4)\n",
+    "# Display all values with respect to the criterion\n",
+    "print(\"DISPLAYING VALUES corresponding to level_ko criteria\")\n",
+    "print(\"CYCLE=\",CYCLE[np.where(level_ko)])\n",
+    "print(\"PRES_QC=\",PRES_QC[np.where(level_ko)])\n",
+    "print(\"PSAL=\",PSAL[np.where(level_ko)])\n",
+    "print(\"PSAL_QC=\",PSAL_QC[np.where(level_ko)])\n",
+    "print(\"TEMP=\",TEMP[np.where(level_ko)])\n",
+    "print(\"TEMP_QC=\",TEMP_QC[np.where(level_ko)])\n",
+    "print(\"RHO=\",RHO[np.where(level_ko)])\n",
     "\n",
     "l_cycle=np.unique(CYCLE[np.where(level_ko)]);\n",
     "# Prepare output for the DMQC report\n",
@@ -1017,14 +1040,7 @@
     "        print(int(icycle),'& PSAL, TEMP & automatic QC & 1 & 4 & ',PRES[i_ko_1],' \\\\ \\\\')\n",
     "    if len(i_ko_2[0]) > 0:\n",
     "        print(int(icycle),'& PSAL & automatic QC & 1 & 4 & ',PRES[i_ko_2],' \\\\ \\\\')\n",
-    "\n",
-    "# Display all values with respect to the criterion\n",
-    "print(\"PRES_QC=\",PRES_QC[np.where(level_ko)])\n",
-    "print(\"PSAL=\",PSAL[np.where(level_ko)])\n",
-    "print(\"PSAL_QC=\",PSAL_QC[np.where(level_ko)])\n",
-    "print(\"TEMP=\",TEMP[np.where(level_ko)])\n",
-    "print(\"TEMP_QC=\",TEMP_QC[np.where(level_ko)])\n",
-    "print(\"RHO=\",RHO[np.where(level_ko)])"
+    "\n"
    ]
   },
   {
